--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-default page
+<html>
+  <head>
+    <title>Sample Website</title>
+  </head>
+  <body
+        <div>
+          <h3>default page - you are online</h3>
+        </div>
+  </body>
+</html>
+
