--- a/app.html
+++ b/app.html
@@ -1,1 +1,11 @@
+<html>
+  <head>
+    <title>Sample Website</title>
+  </head>
+  <body
+        <div>
+          <h3>default page - you are offline. Your web app will run here if there is no internet connection.</h3>
+        </div>
+  </body>
+</html>
 
