--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <div>
           <h3>default page - you are online</h3>
         </div>
+        <script src="sw.js"></script>
   </body>
 </html>
 
