--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title>Sample Website</title>
+    <link type="text/css" href="styles.css" rel="stylesheet" />
   </head>
   <body
         <div>
