--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link type="text/css" href="styles.css" rel="stylesheet" />
   </head>
   <body
-        <div>
+        <div class="container">
           <h3>default page - you are online</h3>
         </div>
         <script>
