--- a/app.html
+++ b/app.html
@@ -4,7 +4,7 @@
     <link type="text/css" href="styles.css" rel="stylesheet" />
   </head>
   <body
-        <div>
+        <div class="container">
           <h3>default page - you are offline. Your web app will run here if there is no internet connection.</h3>
         </div>
   </body>
