--- a/app.html
+++ b/app.html
@@ -5,7 +5,8 @@
   </head>
   <body
         <div class="container">
-          <h3>default page - you are offline. Your web app will run here if there is no internet connection.</h3>
+          <h3>default page - you are <span class="warning">offline.</span></h3>
+          <p>Your web app will run here if there is no internet connection. We can include basic offline information here. For example contact information, images etc.</p>
         </div>
   </body>
 </html>
