--- a/app.html
+++ b/app.html
@@ -7,7 +7,8 @@
         <div class="container">
           <h3>default page - you are <span class="warning">offline.</span></h3>
           <p>Your web app will run here if there is no internet connection. We can include basic offline information here. For example contact information, images etc.</p>
-        </div>
+          <p>We can also style the layout to look similar to your main website.</p>
+  </div>
   </body>
 </html>
 
