--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
   </head>
   <body
         <div class="container">
-          <h3>default page - you are <span class="success">online</span></h3>
-          <p>Your normal website will be displayed here if there is a network connection. If you go offline and reload the page, 
+          <h3>default web page - you're <span class="success">online</span></h3>
+          <p>Your normal website will be displayed here if there's a network connection. If you go offline and reload the page, 
             you should be taken to the offline web app. Most browsers support it, but some do not (mainly older versions of Internet Explorer). Just ensure you're
-            on the lastest browser version.</p>
+            on the latest browser version.</p>
+  
+          <p><strong>If a browser does not support this feature, you'll just see your default browser message telling you that you have no internet connection.</strong></p>
   
           <p>The browsers that <em>do</em> support the offline web app are as follows:</p>
           <ul>
