--- a/app.html
+++ b/app.html
@@ -1,13 +1,13 @@
 <html>
   <head>
-    <title>Sample Website</title>
+    <title>Offline Web App</title>
     <link type="text/css" href="styles.css" rel="stylesheet" />
   </head>
   <body
         <div class="container">
-          <h3>default page - you are <span class="warning">offline.</span></h3>
-          <p>Your web app will run here if there is no internet connection. We can include basic offline information here. For example contact information, images etc.</p>
-          <p>We can also style the layout to look similar to your main website.</p>
+          <h3>web app page - you're <span class="warning">offline.</span></h3>
+          <p>Your web app will run here if there's no internet connection. We can include basic offline information here. For example your contact information, images etc.</p>
+          <p>We can also style the page layout in any way, to look similar to your main website.</p>
   </div>
   </body>
 </html>
