--- a/app.html
+++ b/app.html
@@ -8,7 +8,7 @@
           <h3>web app page - you're <span class="warning">offline.</span></h3>
           <p>Your web app will run here if there's no internet connection. We can include basic offline information here. For example your contact information, images etc.</p>
           <p>We can also style the page layout in any way, to look similar to your main website.</p>
-          <img src="https://media.giphy.com/media/8vpeyWA3OWOhG/giphy.gif">
+          <img src="giphy.webp">
   </div>
   </body>
 </html>
